# sora-device-client

./: .api-version  .gitignore  DEVELOPMENT.md  LICENCE  Makefile  README.md  buf.gen.yaml  config_example.toml  pyproject.toml
.github/workflows/: fmt.yaml
examples/: config.yaml
keaclient/: client.py  config_default.yaml  daemon.py  location.py
keaclient/drivers/: __init__.py
keaclient/formats/: __init__.py  sbp.py
sora_device_client/: __init__.py  client.py  config_default.yaml  config_example.toml  daemon.py  exceptions.py  location.py  main.py  paths.py
sora_device_client/auth0/: __init__.py  info.py  jwt.py
sora_device_client/cli/: __init__.py  login.py  logout.py  paths.py  start.py
sora_device_client/cli/login/: __init__.py
sora_device_client/cli/run/: __init__.py
sora_device_client/client/: __init__.py
sora_device_client/config/: __init__.py  device.py  server.py
sora_device_client/drivers/: __init__.py
sora_device_client/formats/: __init__.py  sbp.py
tests/: test_sora_device_client.py
