[tool.poetry]
name = "sora-device-client"
version = "0.1.0"
description = "A client to stream device location data to a sever for the SORA api"
authors = ["Swift Navifation <developers@swiftnav.com>"]
readme = "README.md"
packages = [
  { include = "sora" },
]

[tool.poetry.dependencies]
python = "^3.10"
grpcio = "1.47.0" # must match version of grpc in buf.yaml
gtfs-realtime-bindings = "^0.0.7"
requests = "^2.28.0"
sbp = "^4.4.0"
tomlkit = "^0.11.2"
appdirs = "^1.4.4"
typer = {extras = ["all"], version = "^0.6.1"}
deepmerge = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[tool.poetry.scripts]
sora = "sora_device_client.cli:app"

[build-system]
requires = [
  "poetry-core>=1.0.0"
]
build-backend = "poetry.core.masonry.api"
