[tool.poetry]
name = "sora-device-client"
version = "0.1.0"
description = "A client to stream device location data to a sever for the SORA api"
authors = ["Swift Navigation <developers@swift-nav.com>"]
readme = "README.md"
packages = [
  { include = "sora" },
]

[tool.poetry.dependencies]
python = "^3.10"
grpcio = "1.48.1" # must match version of grpc in buf.yaml
gtfs-realtime-bindings = "^0.0.7"
requests = "^2.28.0"
sbp = "^4.9.0"
tomlkit = "^0.11.4"
appdirs = "^1.4.4"
typer = {extras = ["all"], version = "^0.6.1"}
deepmerge = "^1.0.1"
persist-queue = "^0.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[tool.poetry.scripts]
sora = "sora_device_client.cli:app"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
